[gd_scene load_steps=2 format=3 uid="uid://btgx71jwsqhqp"]

[ext_resource type="Script" path="res://src/UI/MenuBar/Scripts/file_window.gd" id="1_5a67p"]

[node name="FileWindow" type="ConfirmationDialog"]
disable_3d = true
initial_position = 2
size = Vector2i(400, 200)
unresizable = true
ok_button_text = "KEY_OK"
cancel_button_text = "KEY_CANCEL"
script = ExtResource("1_5a67p")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 157.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PathHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PathLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PathHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "KEY_PATH"

[node name="PathLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PathHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PathButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PathHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "..."

[node name="TypesHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TypesLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TypesHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "KEY_TYPES"

[node name="TypesOption" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/TypesHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TypesHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
tooltip_text = "KEY_ABOUT_TYPES"
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "?"
horizontal_alignment = 1

[node name="AIHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AICheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/AIHBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "KEY_AI "

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AIHBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="HelpLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AIHBox/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.631035, 0.631035, 0.631035, 1)
text = "KEY_ABOUT_AI"
autowrap_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
disable_3d = true
title = "Open a Directory"
initial_position = 2
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*")
use_native_dialog = true

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PathHBox/PathButton" to="." method="_on_path_button_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
